# vitanza-service

./: .gitignore  .travis.yml  CMakeLists.txt  Database Model.mwb  Database Model.mwb.bak  DatabaseSchema.sql  Dockerfile  Dockerfile.txt  ERD.simp  ERD.simp.bak  README.md  VitanzaService.sln  _new Vitanza Service Model.json  appveyor.yml  build.sh  config.json  ecs_task_definition.json  launch.sh  vitanza-service.postman_collection.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aws.yml  push_to_dockerhub.yml
VitanzaService/: Auth.cpp  Auth.h  CMakeLists.txt  Client.cpp  Client.h  Entities.cpp  Entities.h  Order.cpp  Order.h  OrderDetail.cpp  OrderDetail.h  Product.cpp  Product.h  VitanzaService.vcxproj  VitanzaService.vcxproj.filters  auth_wrapper.cpp  auth_wrapper.h  aws_util.cpp  aws_util.h  chemical_orderDetail_wrapper.cpp  chemical_orderDetail_wrapper.h  chemical_order_wrapper.cpp  chemical_order_wrapper.h  chemical_product_wrapper.cpp  chemical_product_wrapper.h  client_wrapper.cpp  client_wrapper.h  config.cpp  config.h  database_manager.h  db_dynamo.cpp  db_dynamo.h  db_mysql.cpp  db_mysql.h  file_wrapper.cpp  file_wrapper.h  local_file_handler.cpp  local_file_handler.h  logger.cpp  logger.h  (+18 more)
